--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "luxon": "^2.4.0",
     "mongoose": "^6.4.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
